test/functions/sungeun/type_illegal.good
type_illegal.chpl:5: syntax error: near '.type'
