test/functions/sungeun/type_illegal.chpl
proc foo() {
  return 2;
}

writeln(foo.type:string);

